# rlmkit

./: .coverage  .env.example  .gitignore  CODE_OF_CONDUCT.md  CODE_REVIEW_GUIDE.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  Draft_RLM_KIT.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SECURITY.md  WEEK6_SUMMARY.md  debug_parsing.py  pyproject.toml  test_chat_integration.py  test_real_scenario.py  test_rlm_error_handling.py  test_simple_math.py
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  eval_regression.md  feature_request.md
benchmarks/: sample_benchmark.yaml
docker/: Dockerfile.sandbox  README.md
examples/: comparison_demo.py  docker_sandbox_demo.py  multi_model_cost_optimization.py
examples/quickstart/: basic_usage.py
frontend/: package-lock.json  package.json
frontend/src/__tests__/: accessibility.test.tsx  chat.test.tsx  dashboard.test.tsx  settings.test.tsx  setup.ts  traces.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/traces/: page.tsx
frontend/src/components/chat/: chat-input.tsx  chat-provider-selector.tsx  comparison-banner.tsx  file-attachment.tsx  message-bubble.tsx  mode-selector.tsx  provider-badge.tsx  trace-inline.tsx  typing-indicator.tsx
frontend/src/components/metrics/: comparison-chart.tsx  cost-breakdown.tsx  metric-card.tsx  performance-trend.tsx  provider-performance.tsx
frontend/src/components/settings/: budget-config.tsx  connection-tester.tsx  execution-config.tsx  model-selector.tsx  profile-card.tsx  provider-card.tsx  system-prompt-editor.tsx
frontend/src/components/shared/: app-shell.tsx  sidebar.tsx  status-indicator.tsx  theme-toggle.tsx
frontend/src/components/trace/: code-block.tsx  step-detail.tsx  timeline.tsx  trace-tree.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  card.tsx  dialog.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  switch.tsx
frontend/src/lib/: api.ts  use-chat.ts
specs/: 00-overview.md  01-backend-models-crud.md  02-backend-chat-execution.md  03-frontend-settings.md  04-frontend-chat-page.md
src/rlmkit/: __init__.py  api.py  config.py  rlmkit_config.default.yaml
src/rlmkit/application/: __init__.py  dto.py
src/rlmkit/application/ports/: __init__.py  embedding_port.py  event_port.py  llm_port.py  sandbox_port.py  storage_port.py
src/rlmkit/application/use_cases/: __init__.py  run_comparison.py  run_direct.py  run_rag.py  run_rlm.py
src/rlmkit/benchmark/: __init__.py  dataset.py  report.py  runner.py
src/rlmkit/core/: __init__.py  actions.py  budget.py  comparison.py  errors.py  guardrails.py  model_config.py  parsing.py  recursion.py  rlm.py  trace.py
src/rlmkit/domain/: __init__.py  entities.py  events.py  exceptions.py  value_objects.py
src/rlmkit/envs/: __init__.py  pyrepl_env.py  sandbox.py  timeout.py
src/rlmkit/infrastructure/: __init__.py
src/rlmkit/infrastructure/config/: __init__.py  yaml_config.py
src/rlmkit/infrastructure/llm/: __init__.py  anthropic_adapter.py  litellm_adapter.py  mock_adapter.py  ollama_adapter.py  openai_adapter.py
src/rlmkit/infrastructure/sandbox/: __init__.py  docker_sandbox_adapter.py  local_sandbox.py  restricted_sandbox.py  sandbox_factory.py
src/rlmkit/infrastructure/storage/: __init__.py  sqlite_adapter.py
src/rlmkit/llm/: __init__.py  anthropic_client.py  auto.py  base.py  config.py  lmstudio_client.py  mock_client.py  ollama_client.py  openai_client.py  vllm_client.py
src/rlmkit/prompts/: README.md  __init__.py  system_prompt_templates.json  system_prompt_v1_0.txt  system_prompt_v2_0.txt  system_prompt_v2_0_json.txt  templates.py
src/rlmkit/public/: __init__.py  client.py  errors.py  types.py
src/rlmkit/server/: __init__.py  app.py  dependencies.py  models.py
src/rlmkit/server/routes/: chat.py  chat_providers.py  config.py  files.py  metrics.py  profiles.py  prompts.py  providers.py  sessions.py  traces.py
src/rlmkit/storage/: __init__.py  conversation_store.py  database.py  vector_store.py
src/rlmkit/strategies/: __init__.py  base.py  direct.py  embeddings.py  evaluator.py  indexed_rag.py  rag.py  rlm_strategy.py
src/rlmkit/tools/: __init__.py  content.py  recursion.py
src/rlmkit/ui/: __init__.py  app.py  charts.py  file_processor.py  session.py  styles.css
src/rlmkit/ui/.streamlit/: config.toml
src/rlmkit/ui/components/: __init__.py  chat_message.py  navigation.py  session_summary.py
src/rlmkit/ui/data/: __init__.py  providers_catalog.py
src/rlmkit/ui/pages/: 01_chat.py  02_analysis.py  __init__.py  analysis_panel.py  chat_panel.py  configuration.py  configuration_panel.py  metrics_dashboard.py
src/rlmkit/ui/services/: __init__.py  analytics_engine.py  chat_manager.py  llm_config_manager.py  memory_monitor.py  metrics_collector.py  models.py  profile_store.py  secret_store.py
tests/: MANUAL_TEST_PLAN.md  TEST_STRATEGY.md  test_api.py  test_api_key_fix.py  test_api_key_simple.py  test_auto_config.py  test_budget.py  test_chat_execution_spec02.py  test_chat_integration.py  test_chat_providers_crud.py  test_config.py  test_conversation_store.py  test_cooldown_fixes.py  test_database.py  test_dataset.py  test_domain.py  test_embeddings.py  test_env.py  test_evaluator.py  test_indexed_rag.py  test_json_subcall.py  test_litellm_adapter.py  test_model_config.py  test_parsing.py  test_port_compliance.py  test_providers.py  test_public_client.py  test_rag_strategy.py  test_real_scenario.py  test_recursion.py  test_recursive_controller.py  test_report.py  test_restricted_sandbox.py  test_rlm.py  test_rlm_error_handling.py  test_rlm_fix_verification.py  test_runner.py  test_sandbox.py  test_server.py  test_strategies.py  (+9 more)
tests/e2e/: conftest.py  test_api_endpoints.py  test_full_pipeline.py  test_websocket_streaming.py
tests/integration/: conftest.py  test_budget_enforcement.py  test_provider_switching.py  test_rlm_e2e.py  test_strategy_comparison.py
tests/ui/: test_analytics_engine.py  test_infrastructure.py  test_profile_store.py
(+1 files in other folders)
