[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlmkit"
version = "0.1.0"
description = "Recursive Language Model (RLM) toolkit for managing large context through code generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RLMKit Contributors"}
]
keywords = ["llm", "rlm", "recursive", "context", "large-context", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
]

ui = [
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    # External LLM providers
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "ollama>=0.1.0",
    "requests>=2.31.0",  # For HTTP-based providers (LM Studio)
    "vllm>=0.4.0",       # For vLLM serving
]

all = [
    "rlmkit[dev,ui]",
]

[project.urls]
Homepage = "https://github.com/your-org/rlmkit"
Repository = "https://github.com/your-org/rlmkit"
Documentation = "https://github.com/your-org/rlmkit/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rlmkit = ["rlmkit_config.default.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=rlmkit",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.per-file-ignores]
"tests/*" = ["N802"]  # Allow lowercase function names in tests

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
